idocs-share/source/web/themes/citeckTheme/presentation.css
/* ... */
.page-title a,
.page-title a:visited
{
   color: #333;
}

.page-title a:hover
{
   color: #fff;
}

.page-title h1 span
{
   color: #333;
}

.site-navigation
{
   background: none;
   border-bottom: 1px solid #eee;
   border-top: 1px solid #eee;
   color: white;
}

span.navigation-separator,
span.navigation-item,
span.navigation-item-alt
{
   color: #ccc;
}

span.navigation-item a,
span.navigation-item a:visited
{
   color: #333;
}

span.navigation-item a.active-page,
span.navigation-item a.active-page:visited
{
   color: #333;
   font-family: Open Sans Bold, Arial, sans-serif;
}

span.navigation-item a:hover
{
   color: #333;
   background-color: #eee;
}

span.navigation-separator
{
   border-right: 1px solid #eee;
}

span.navigation-separator-alt
{
   border-right: 1px solid #eee;
}

/* Standard toolbars */

.share-toolbar,
.toolbar
{
   border-bottom: none;
}

.share-toolbar .action-bar,
.toolbar .action-bar
{
   border-right: 1px solid #eee;
}

.share-toolbar .separator,
.toolbar .separator
{
   border-right: 1px solid #eee;
}

.share-toolbar .backLink
{
   background-image: url(../../components/images/back-arrow.png);
   background-position: left center;
   background-repeat: no-repeat;
   color: #333333;
   padding: 0 5px 0 19px;
   margin-right: 5px;
}

.share-toolbar .forwardLink
{
   background-image: url(../../components/images/forward-arrow-16.png);
   background-position: right center;
   background-repeat: no-repeat;
   color: #333333;
   padding: 0 21px 0 5px;
   margin-right: 5px;
}

.sticky-wrapper strong
{
}

.sticky-wrapper em
{
   font-style: italic;
}

.rich-content a.wiki-missing-page
{
   color: #CC2200 !important;
}

/* Share forms */

.share-form .form-container .form-fields
{
   
}

.form-container textarea,
.page-form-body textarea
{
   width: 99.5% !important;
}

/*.form-container .input,
.form-container input[type="file"],
.form-container input[type="text"],
.form-container input[type="password"],
.form-container textarea,
.form-container .input input[type="file"],
.form-container .input input[type="text"],
.form-container .input input[type="password"],
.form-container .input textarea,
.form-container select,
.page-form-body .input,
.page-form-body input[type="file"],
.page-form-body input[type="text"],
.page-form-body input[type="password"],
.page-form-body textarea,
.page-form-body .input input[type="file"],
.page-form-body .input input[type="text"],
.page-form-body .input input[type="password"],
.page-form-body .input textarea,
.page-form-body select
{
   box-shadow: 0.33px 2px 8px rgba(0, 0, 0, 0.1);
}*/

.defaultSkin table.mceLayout
{
   width: 100% !important;
}

.mceEditor.defaultSkin
{
   box-shadow: 0.33px 2px 8px rgba(0, 0, 0, 0.15);
   display: block;
}

/*.input,
.sticky-wrapper input[type="text"],
.sticky-wrapper input[type="password"],
.sticky-wrapper textarea,
.sticky-wrapper select,
.yui-overlay input[type="text"],
.yui-overlay input[type="password"],
.yui-overlay textarea,
.yui-overlay select,
.form-element-border,
.share-form .yui-dt table
{
   border: 1px solid #eee;
   font-weight: normal;
}
*/

.share-form .yui-dt table td.yui-dt-last
{
   border-right: none;
}

.share-form .form-manager {
  overflow: auto;
  margin-left: 1em;
  width: 800px;
  padding: 0;
}

.share-form .form-manager label.workflow-definition {
  margin: 0;
  padding: 0;
  line-height: 155%;
  margin-right: 10px;
}

.share-form .form-manager h1
{
   margin-bottom: 0.5em !important;
}

.form-element-background-color
{
   background-color: #fff;
}

.create-content-mgr .heading
{
   font-family: Open Sans Condensed, Arial, sans-serif;
   font-size: 230% !important;
   padding: 0.5em 0.2em 0 !important;
}

.yui-skin-lightTheme .yui-navset .yui-content
{
   background: #eee;
}

/* same as theme-color-2 */

.toolbar .link a:hover,
.members-bar .member-link a:hover
{
   color: #333;
}

/* Richtext Editor Plug-ins */

.yui-toolbar-container .yui-toolbar-alfresco-imagelib span.yui-toolbar-icon,
span.mce_alfresco-imagelibrary
{
   background-position: 0 0 !important;
   background-image: url(images/alfresco-imagelib.png) !important;
}

.mce_alfresco-imagelibrary img
{
   background-position: 0px 2px !important;
}

.yui-toolbar-container .yui-toolbar-alfresco-imagelib span.yui-toolbar-icon,
span.mce_alfresco-linklibrary
{
   background-position: 0 0 !important;
   background-image: url(images/alfresco-linklib.png) !important;
}

.mce_alfresco-linklibrary img
{
   background-position: 0px 2px !important;
}

/* Override checked styles for doclist */

/*.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-radio-button-checked,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-checkbox-button-checked,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-radio-button-checked,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-checkbox-button-checked
{
   border-color: #ccc;
   background: none;
}*/

/*.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-radio-button-checked span.first-child,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-checkbox-button-checked span.first-child,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-radio-button-checked span.first-child,
.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-checkbox-button-checked span.first-child
{
   border-color: #ccc;
}*/

/* Ensure hover state can be activated */

/*.yui-skin-lightTheme .no-check-bg div.flat-button span.yui-button-hover
{
   background: none;
   border-color: #ccc;
}*/

/* Override YUI Button styles for - attention button style */

/*.yui-skin-lightTheme .alfresco-attention-yui-button,
.yui-skin-lightTheme .alfresco-attention-yui-button span.first-child
{
   border-color: #e0b000;
}

.yui-skin-lightTheme .alfresco-attention-yui-button.yui-button
{
   background-position: 0 -2000px;
}

.yui-skin-lightTheme .alfresco-attention-yui-button.yui-button-hover
{
   background-position: 0 -2100px;
}
/* ... */

